--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
         <!-- Section d'en-tête de la page d'accueil "Explorer nos restaurants" -->
 
         <section class="hero-section">
-            <h1 class="hero-section--title">Réservez le menu qui vous convient</h1>
+            <h1 class="hero-section--title classic-title">Réservez le menu qui vous convient</h1>
             <p class="hero-section--slogan">Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
             <button class="primary-btn">Explorer nos restaurants</button>
         </section>
@@ -46,7 +46,7 @@
         <!-- Section "Fonctionnement" -->
 
         <section class="demo-section">
-            <h2>Fonctionnement</h2>
+            <h2 class="classic-title">Fonctionnement</h2>
             <ol>
                 <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
                 <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
@@ -56,7 +56,7 @@
 
         <section class="restaurant-section">
 
-            <h2>Restaurants</h2>
+            <h2 class="classic-title">Restaurants</h2>
 
             <article class="restaurant-card new">
                 <a href="./singulars/singular-lapalettedugout.html">
@@ -79,14 +79,14 @@
     <!-- FOOTER -->
 
     <footer>
-        <h2>Ohmyfood</h2>
+        <h2>ohmyfood</h2>
         <u class="footer-list">
-            <li class="footer-list__item"><i class="footer-list__item--icon fas fa-utensils"></i>Proposer un restaurant
+            <li class="footer-list__item"><a href="#"><i class="footer-list__item--icon fas fa-utensils"></i>Proposer un restaurant</a>
             </li>
-            <li class="footer-list__item"><i class="footer-list__item--icon fas fa-hands-helping"></i>Devenir partenaire
+            <li class="footer-list__item"><a href="#"><i class="footer-list__item--icon fas fa-hands-helping"></i>Devenir partenaire</a>
             </li>
-            <li class="footer-list__item">Mentions légales</li>
-            <li class="footer-list__item">Contact</li>
+            <li class="footer-list__item"><a href="#">Mentions légales</a></li>
+            <li class="footer-list__item"><a href="#">Contact</a></li>
         </u>
     </footer>
 
