Style des cartes "Restaurants" sur la Homepage

--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
 
         <!-- Section "Fonctionnement" -->
 
-        <section class="demo-section">
+        <section class="steps-section">
             <h2 class="classic-title">Fonctionnement</h2>
             <ol>
                 <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
@@ -53,6 +53,8 @@
                 <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
             </ol>
         </section>
+
+        <!-- Section "Restaurants" -->
 
         <section class="restaurant-section">
 
@@ -62,10 +64,60 @@
                 <a href="./singulars/singular-lapalettedugout.html">
                     <div class="restaurant-card__thumbnail"><img class="restaurant-card__thumbnail--img" src="./medias/photos/" alt=""></div>
                     <div class="restaurant-card__infos">
-                        <h3 class="restaurant-card__infos--name">La palette du goût</h3>
-                        <p class="restaurant-card__infos--city">Ménilmontant</p>
-                        <div class="restaurant-card__fav">
-                            <i class="fal fa-heart favorite--icon empty"></i>
+                        <div class="restaurant-card__infos-text">
+                        <h3 class="restaurant-card__infos-text--name">La palette du goût</h3>
+                        <p class="restaurant-card__infos-text--city">Ménilmontant</p>
+                        </div>
+                        <div class="restaurant-card__infos--fav">
+                            <i class="far fa-heart favorite--icon empty"></i>
+                            <i class="fas fa-heart favorite--icon full"></i>
+                        </div>
+                    </div>
+                </a>
+            </article>
+
+            <article class="restaurant-card new">
+                <a href="./singulars/singular-lapalettedugout.html">
+                    <div class="restaurant-card__thumbnail"><img class="restaurant-card__thumbnail--img" src="./medias/photos/" alt=""></div>
+                    <div class="restaurant-card__infos">
+                        <div class="restaurant-card__infos-text">
+                        <h3 class="restaurant-card__infos-text--name">La note enchantée</h3>
+                        <p class="restaurant-card__infos-text--city">Charonne</p>
+                        </div>
+                        <div class="restaurant-card__infos--fav">
+                            <i class="far fa-heart favorite--icon empty"></i>
+                            <i class="fas fa-heart favorite--icon full"></i>
+                        </div>
+                    </div>
+                </a>
+            </article>
+
+            <article class="restaurant-card new">
+                <a href="./singulars/singular-lapalettedugout.html">
+                    <div class="restaurant-card__thumbnail"><img class="restaurant-card__thumbnail--img" src="./medias/photos/" alt=""></div>
+                    <div class="restaurant-card__infos">
+                        <div class="restaurant-card__infos-text">
+                        <h3 class="restaurant-card__infos-text--name">À la française</h3>
+                        <p class="restaurant-card__infos-text--city">Cité Rouge</p>
+                        </div>
+                        <div class="restaurant-card__infos--fav">
+                            <i class="far fa-heart favorite--icon empty"></i>
+                            <i class="fas fa-heart favorite--icon full"></i>
+                        </div>
+                    </div>
+                </a>
+            </article>
+
+            <article class="restaurant-card new">
+                <a href="./singulars/singular-lapalettedugout.html">
+                    <div class="restaurant-card__thumbnail"><img class="restaurant-card__thumbnail--img" src="./medias/photos/" alt=""></div>
+                    <div class="restaurant-card__infos">
+                        <div class="restaurant-card__infos-text">
+                        <h3 class="restaurant-card__infos-text--name">Le délice des sens</h3>
+                        <p class="restaurant-card__infos-text--city">Folie-Méricourt</p>
+                        </div>
+                        <div class="restaurant-card__infos--fav">
+                            <i class="far fa-heart favorite--icon empty"></i>
                             <i class="fas fa-heart favorite--icon full"></i>
                         </div>
                     </div>
