--- a/singulars/singular-lapalettedugout.html
+++ b/singulars/singular-lapalettedugout.html
@@ -20,7 +20,7 @@
     <!-- HEADER -->
 
     <header>
-        <a href="../../home.html"><img src="../medias/images/logo-ohmyfood.svg"
+        <a class="header--brand" href="../home.html"><img src="../medias/images/logo-ohmyfood.svg"
                 alt="Logo de OhMyFood : réservez votre repas avant d'arriver au restaurant !"></a>
     </header>
 
