Style de la section "Fonctionnement"

--- a/home.html
+++ b/home.html
@@ -47,10 +47,10 @@
 
         <section class="steps-section">
             <h2 class="classic-title">Fonctionnement</h2>
-            <ol>
-                <li><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
-                <li><i class="fas fa-list-ul"></i>Composez votre menu</li>
-                <li><i class="fas fa-store"></i>Dégustez au restaurant</li>
+            <ol class="steps-section__list">
+                <li data-count="1" class="steps-section__list--item"><i class="fas fa-mobile-alt"></i>Choisissez un restaurant</li>
+                <li data-count="2" class="steps-section__list--item"><i class="fas fa-list-ul"></i>Composez votre menu</li>
+                <li data-count="3" class="steps-section__list--item"><i class="fas fa-store"></i>Dégustez au restaurant</li>
             </ol>
         </section>
 
@@ -92,7 +92,7 @@
                 </a>
             </article>
 
-            <article class="restaurant-card new">
+            <article class="restaurant-card">
                 <a href="./singulars/singular-lapalettedugout.html">
                     <div class="restaurant-card__thumbnail"><img class="restaurant-card__thumbnail--img" src="./medias/photos/" alt=""></div>
                     <div class="restaurant-card__infos">
@@ -108,7 +108,7 @@
                 </a>
             </article>
 
-            <article class="restaurant-card new">
+            <article class="restaurant-card">
                 <a href="./singulars/singular-lapalettedugout.html">
                     <div class="restaurant-card__thumbnail"><img class="restaurant-card__thumbnail--img" src="./medias/photos/" alt=""></div>
                     <div class="restaurant-card__infos">
