Style de la page Singular

--- a/home.html
+++ b/home.html
@@ -62,63 +62,63 @@
 
             <article class="restaurant-card new">
                 <a href="./singulars/singular-lapalettedugout.html">
-                    <div class="restaurant-card__thumbnail"><img class="restaurant-card__thumbnail--img" src="./medias/photos/" alt=""></div>
+                    <div class="restaurant-card__thumbnail"><img class="restaurant-card__thumbnail--img" src="./medias/photos/palette-du-gout.jpg" alt=""></div>
                     <div class="restaurant-card__infos">
                         <div class="restaurant-card__infos-text">
                         <h3 class="restaurant-card__infos-text--name">La palette du goût</h3>
                         <p class="restaurant-card__infos-text--city">Ménilmontant</p>
                         </div>
-                        <div class="restaurant-card__infos--fav">
-                            <i class="far fa-heart favorite--icon empty"></i>
-                            <i class="fas fa-heart favorite--icon full"></i>
+                        <div class="add-to-fav">
+                            <i class="far fa-heart add-to-fav--icon empty"></i>
+                            <i class="fas fa-heart add-to-fav--icon full"></i>
                         </div>
                     </div>
                 </a>
             </article>
 
             <article class="restaurant-card new">
-                <a href="./singulars/singular-lapalettedugout.html">
-                    <div class="restaurant-card__thumbnail"><img class="restaurant-card__thumbnail--img" src="./medias/photos/" alt=""></div>
+                <a href="./singulars/singular-lanoteenchantee.html">
+                    <div class="restaurant-card__thumbnail"><img class="restaurant-card__thumbnail--img" src="./medias/photos/la-note-enchantee.jpg" alt=""></div>
                     <div class="restaurant-card__infos">
                         <div class="restaurant-card__infos-text">
                         <h3 class="restaurant-card__infos-text--name">La note enchantée</h3>
                         <p class="restaurant-card__infos-text--city">Charonne</p>
                         </div>
-                        <div class="restaurant-card__infos--fav">
-                            <i class="far fa-heart favorite--icon empty"></i>
-                            <i class="fas fa-heart favorite--icon full"></i>
+                        <div class="add-to-fav">
+                            <i class="far fa-heart add-to-fav--icon empty"></i>
+                            <i class="fas fa-heart add-to-fav--icon full"></i>
                         </div>
                     </div>
                 </a>
             </article>
 
             <article class="restaurant-card">
-                <a href="./singulars/singular-lapalettedugout.html">
-                    <div class="restaurant-card__thumbnail"><img class="restaurant-card__thumbnail--img" src="./medias/photos/" alt=""></div>
+                <a href="./singulars/singular-alafrancaise.html">
+                    <div class="restaurant-card__thumbnail"><img class="restaurant-card__thumbnail--img" src="./medias/photos/a-la-francaise.jpg" alt=""></div>
                     <div class="restaurant-card__infos">
                         <div class="restaurant-card__infos-text">
                         <h3 class="restaurant-card__infos-text--name">À la française</h3>
                         <p class="restaurant-card__infos-text--city">Cité Rouge</p>
                         </div>
-                        <div class="restaurant-card__infos--fav">
-                            <i class="far fa-heart favorite--icon empty"></i>
-                            <i class="fas fa-heart favorite--icon full"></i>
+                        <div class="add-to-fav">
+                            <i class="far fa-heart add-to-fav--icon empty"></i>
+                            <i class="fas fa-heart add-to-fav--icon full"></i>
                         </div>
                     </div>
                 </a>
             </article>
 
             <article class="restaurant-card">
-                <a href="./singulars/singular-lapalettedugout.html">
-                    <div class="restaurant-card__thumbnail"><img class="restaurant-card__thumbnail--img" src="./medias/photos/" alt=""></div>
+                <a href="./singulars/singular-ledelicedessens.html">
+                    <div class="restaurant-card__thumbnail"><img class="restaurant-card__thumbnail--img" src="./medias/photos/delice-des-sens.jpg" alt=""></div>
                     <div class="restaurant-card__infos">
                         <div class="restaurant-card__infos-text">
                         <h3 class="restaurant-card__infos-text--name">Le délice des sens</h3>
                         <p class="restaurant-card__infos-text--city">Folie-Méricourt</p>
                         </div>
-                        <div class="restaurant-card__infos--fav">
-                            <i class="far fa-heart favorite--icon empty"></i>
-                            <i class="fas fa-heart favorite--icon full"></i>
+                        <div class="add-to-fav">
+                            <i class="far fa-heart add-to-fav--icon empty"></i>
+                            <i class="fas fa-heart add-to-fav--icon full"></i>
                         </div>
                     </div>
                 </a>
