--- a/singulars/singular-lanoteenchantee.html
+++ b/singulars/singular-lanoteenchantee.html
@@ -1,16 +1,89 @@
 <!DOCTYPE html>
 <html lang="fr">
-    
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="../styles/main.css">
     <link rel="icon" type="image/png" href="./medias/images/favicon-ohmyfood.png" />
 
     <!-- Scripts -->
 
     <script src="https://kit.fontawesome.com/91689b993c.js" crossorigin="anonymous"></script>
-
-    <title>La note enchantée • OhMyFood!</title>
+    
+    <title>La palette du goût • OhMyFood!</title>
 </head>
+
+<body>
+
+    <!-- HEADER -->
+
+    <header>
+        <a class="header__back" href="../home.html"><i class="fas fa-arrow-left"></i></a>
+        <a class="header--brand" href="../home.html"><img src="../medias/images/logo-ohmyfood.svg"
+                alt="Logo de OhMyFood : réservez votre repas avant d'arriver au restaurant !"></a>
+    </header>
+
+    <!-- MAIN -->
+
+    <main>
+
+        <div class="singular-thumbnail"><img class="singular-thumbnail--img" src="../medias/photos/la-note-enchantee.jpg" alt=""></div>
+
+        <div class="singular-main-section">
+
+            <section class="singular-title-section">
+                <h1 class="singular-title-section--h1">La note enchantée</h1>
+                <div class="add-to-fav">
+                    <i class="far fa-heart add-to-fav--icon empty"></i>
+                    <i class="fas fa-heart add-to-fav--icon full"></i>
+                </div>
+            </section>
+
+            <section class="singular-element">
+                <h2 class="singular-element--title">Entrées</h2>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Fricassé d'escargot</h3>
+                     <p class="singular-element__item-text--details">Au piment d'espelette</p>
+                    </div>
+                     <p class="singular-element__item--price">25 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Foie gras de canard mi-cuit</h3>
+                     <p class="singular-element__item-text--details">Assaisonné à la truffe sur lit de caviar</p>
+                    </div>
+                     <p class="singular-element__item--price">25 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+            </section>
+
+            <button class="primary-btn">Commander</button>
+
+        </div>
+
+    </main>
+
+    <!-- FOOTER -->
+
+    <footer>
+        <h2>ohmyfood</h2>
+        <u class="footer-list">
+            <li class="footer-list__item"><a href="#"><i class="footer-list__item--icon fas fa-utensils"></i>Proposer un restaurant</a>
+            </li>
+            <li class="footer-list__item"><a href="#"><i class="footer-list__item--icon fas fa-hands-helping"></i>Devenir partenaire</a>
+            </li>
+            <li class="footer-list__item"><a href="#">Mentions légales</a></li>
+            <li class="footer-list__item"><a href="#">Contact</a></li>
+        </u>
+    </footer>
+
+</body>
+
+</html>
