--- a/singulars/singular-lapalettedugout.html
+++ b/singulars/singular-lapalettedugout.html
@@ -20,6 +20,7 @@
     <!-- HEADER -->
 
     <header>
+        <a class="header__back" href="../home.html"><i class="fas fa-arrow-left"></i></a>
         <a class="header--brand" href="../home.html"><img src="../medias/images/logo-ohmyfood.svg"
                 alt="Logo de OhMyFood : réservez votre repas avant d'arriver au restaurant !"></a>
     </header>
@@ -28,29 +29,115 @@
 
     <main>
 
-        <div class="singular-thumbnail"><img class="singular-thumbnail--img" src="" alt=""></div>
+        <div class="singular-thumbnail"><img class="singular-thumbnail--img" src="../medias/photos/palette-du-gout.jpg" alt=""></div>
 
         <div class="singular-main-section">
 
             <section class="singular-title-section">
-                <h1 class="singular--h1">À la française</h1>
-                <div class="singular-title-section__fav">
-                    <i class="fal fa-heart favorite--icon empty"></i>
-                    <i class="fas fa-heart favorite--icon full"></i>
+                <h1 class="singular-title-section--h1">La palette du goût</h1>
+                <div class="add-to-fav">
+                    <i class="far fa-heart add-to-fav--icon empty"></i>
+                    <i class="fas fa-heart add-to-fav--icon full"></i>
                 </div>
             </section>
 
             <section class="singular-element">
                 <h2 class="singular-element--title">Entrées</h2>
+
                 <article class="singular-element__item">
-                     <h3 class="singular-element__item--title">Tartare de poulpe acidulé</h3>
-                     <p class="singular-element__item--details">Aux zests d'orange</p>
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Fricassé d'escargot</h3>
+                     <p class="singular-element__item-text--details">Au piment d'espelette</p>
+                    </div>
                      <p class="singular-element__item--price">25 €</p>
                      <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
                 </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Foie gras de canard mi-cuit</h3>
+                     <p class="singular-element__item-text--details">Et ses copeaux de truffe noire</p>
+                    </div>
+                     <p class="singular-element__item--price">35 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Oeuf au plat</h3>
+                     <p class="singular-element__item-text--details">Assaisonné à la truffe sur lit de caviar</p>
+                    </div>
+                     <p class="singular-element__item--price">20 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
             </section>
 
-            <button>Commander</button>
+            <section class="singular-element">
+                <h2 class="singular-element--title">Plats</h2>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Filet de boeuf aux herbes</h3>
+                     <p class="singular-element__item-text--details">Accompagné de sa ribambelle de légumes</p>
+                    </div>
+                     <p class="singular-element__item--price">40 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Parmentier de queue de boeuf</h3>
+                     <p class="singular-element__item-text--details">À la truffe noire sur sa purée de panais</p>
+                    </div>
+                     <p class="singular-element__item--price">35 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Filet de Turbot</h3>
+                     <p class="singular-element__item-text--details">Aux agrumes</p>
+                    </div>
+                     <p class="singular-element__item--price">44 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+            </section>
+
+            <section class="singular-element">
+                <h2 class="singular-element--title">Desserts</h2>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Paris-Brest</h3>
+                     <p class="singular-element__item-text--details">Revisité</p>
+                    </div>
+                     <p class="singular-element__item--price">18 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Macaron au chocolat d'exception</h3>
+                     <p class="singular-element__item-text--details">Et glace à la vanille de Madagascar</p>
+                    </div>
+                     <p class="singular-element__item--price">22 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Mousse au chocolat</h3>
+                     <p class="singular-element__item-text--details">Au piment d'espelette et à la truffe noire</p>
+                    </div>
+                     <p class="singular-element__item--price">23 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+            </section>
+
+            <button class="primary-btn">Commander</button>
 
         </div>
 
@@ -59,12 +146,14 @@
     <!-- FOOTER -->
 
     <footer>
-        <h2>Ohmyfood</h2>
-        <u>
-            <li><i class="fas fa-utensils"></i>Proposer un restaurant</li>
-            <li><i class="fas fa-hands-helping"></i>Devenir partenaire</li>
-            <li>Mentions légales</li>
-            <li>Contact</li>
+        <h2>ohmyfood</h2>
+        <u class="footer-list">
+            <li class="footer-list__item"><a href="#"><i class="footer-list__item--icon fas fa-utensils"></i>Proposer un restaurant</a>
+            </li>
+            <li class="footer-list__item"><a href="#"><i class="footer-list__item--icon fas fa-hands-helping"></i>Devenir partenaire</a>
+            </li>
+            <li class="footer-list__item"><a href="#">Mentions légales</a></li>
+            <li class="footer-list__item"><a href="#">Contact</a></li>
         </u>
     </footer>
 
