--- a/singulars/singular-alafrancaise.html
+++ b/singulars/singular-alafrancaise.html
@@ -46,8 +46,8 @@
 
                 <article class="singular-element__item">
                     <div class="singular-element__item-text">
-                     <h3 class="singular-element__item-text--title">Fricassé d'escargot</h3>
-                     <p class="singular-element__item-text--details">Au piment d'espelette</p>
+                     <h3 class="singular-element__item-text--title">Tartare de poulpe acidulé</h3>
+                     <p class="singular-element__item-text--details">Aux zests d'orange</p>
                     </div>
                      <p class="singular-element__item--price">25 €</p>
                      <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
@@ -55,14 +55,88 @@
 
                 <article class="singular-element__item">
                     <div class="singular-element__item-text">
-                     <h3 class="singular-element__item-text--title">Foie gras de canard mi-cuit</h3>
-                     <p class="singular-element__item-text--details">Assaisonné à la truffe sur lit de caviar</p>
+                     <h3 class="singular-element__item-text--title">Velouté de légumes d'antan</h3>
+                     <p class="singular-element__item-text--details">Carotte, panais, topinambour</p>
                     </div>
                      <p class="singular-element__item--price">25 €</p>
                      <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
                 </article>
 
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Soupe à l'oignon</h3>
+                     <p class="singular-element__item-text--details">Revisitée</p>
+                    </div>
+                     <p class="singular-element__item--price">20 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
             </section>
+
+            <section class="singular-element">
+                <h2 class="singular-element--title">Plats</h2>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Coquilles Saint-Jacques</h3>
+                     <p class="singular-element__item-text--details">Accompagnée d'une purée de panais</p>
+                    </div>
+                     <p class="singular-element__item--price">40 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Magret de canard</h3>
+                     <p class="singular-element__item-text--details">Et parmentier de pommes de terres</p>
+                    </div>
+                     <p class="singular-element__item--price">35 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Pigeonneau d'Ille-et-Vilaine</h3>
+                     <p class="singular-element__item-text--details">Revisitée</p>
+                    </div>
+                     <p class="singular-element__item--price">44 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+            </section>
+
+            <section class="singular-element">
+                <h2 class="singular-element--title">Desserts</h2>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Pétales de violettes glacées</h3>
+                     <p class="singular-element__item-text--details">Et purée de noisette</p>
+                    </div>
+                     <p class="singular-element__item--price">18 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Fondant au chocolat</h3>
+                     <p class="singular-element__item-text--details">Revisité</p>
+                    </div>
+                     <p class="singular-element__item--price">22 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Millefeuille croustillant</h3>
+                     <p class="singular-element__item-text--details">Myrtilles et pâte d'amande</p>
+                    </div>
+                     <p class="singular-element__item--price">23 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+            </section>
+
 
             <button class="primary-btn">Commander</button>
 
@@ -80,7 +154,7 @@
             <li class="footer-list__item"><a href="#"><i class="footer-list__item--icon fas fa-hands-helping"></i>Devenir partenaire</a>
             </li>
             <li class="footer-list__item"><a href="#">Mentions légales</a></li>
-            <li class="footer-list__item"><a href="#">Contact</a></li>
+            <li class="footer-list__item"><a href="mailto:contact@ohmyfood.fr">Contact</a></li>
         </u>
     </footer>
 
