--- a/singulars/singular-lanoteenchantee.html
+++ b/singulars/singular-lanoteenchantee.html
@@ -46,8 +46,8 @@
 
                 <article class="singular-element__item">
                     <div class="singular-element__item-text">
-                     <h3 class="singular-element__item-text--title">Fricassé d'escargot</h3>
-                     <p class="singular-element__item-text--details">Au piment d'espelette</p>
+                     <h3 class="singular-element__item-text--title">Ravioles de foie gras</h3>
+                     <p class="singular-element__item-text--details">Accompagnés de leur crème à la truffe</p>
                     </div>
                      <p class="singular-element__item--price">25 €</p>
                      <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
@@ -55,10 +55,92 @@
 
                 <article class="singular-element__item">
                     <div class="singular-element__item-text">
-                     <h3 class="singular-element__item-text--title">Foie gras de canard mi-cuit</h3>
-                     <p class="singular-element__item-text--details">Assaisonné à la truffe sur lit de caviar</p>
+                     <h3 class="singular-element__item-text--title">Caviar osciètre</h3>
+                     <p class="singular-element__item-text--details">Sur blini à la farine de blé noir</p>
                     </div>
-                     <p class="singular-element__item--price">25 €</p>
+                     <p class="singular-element__item--price">35 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Homard et espuma de pommes de terre</h3>
+                     <p class="singular-element__item-text--details">Mariné aux zests d'orange</p>
+                    </div>
+                     <p class="singular-element__item--price">20 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Foie gras de canard cuit entier</h3>
+                     <p class="singular-element__item-text--details">Confiture de figue et pain toasté</p>
+                    </div>
+                     <p class="singular-element__item--price">35 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+            </section>
+
+            <section class="singular-element">
+                <h2 class="singular-element--title">Plats</h2>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Noix de coquilles Saint-Jacques</h3>
+                     <p class="singular-element__item-text--details">Sur lit de purée de céleri-rave</p>
+                    </div>
+                     <p class="singular-element__item--price">40 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Langoustine poêlée</h3>
+                     <p class="singular-element__item-text--details">Purée de patate douce</p>
+                    </div>
+                     <p class="singular-element__item--price">35 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Mijoté de queue de boeuf</h3>
+                     <p class="singular-element__item-text--details">Et riz sauvage aux zests de citron</p>
+                    </div>
+                     <p class="singular-element__item--price">44 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+            </section>
+
+            <section class="singular-element">
+                <h2 class="singular-element--title">Desserts</h2>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Macaron noisette et chocolat</h3>
+                     <p class="singular-element__item-text--details">Glace au caramel brun et sel de Guérande</p>
+                    </div>
+                     <p class="singular-element__item--price">18 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Baba au rhum revisité</h3>
+                     <p class="singular-element__item-text--details">Avec son coulis de citron</p>
+                    </div>
+                     <p class="singular-element__item--price">22 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Tarte au citron meringuée</h3>
+                     <p class="singular-element__item-text--details">Destructurée</p>
+                    </div>
+                     <p class="singular-element__item--price">23 €</p>
                      <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
                 </article>
 
@@ -80,7 +162,7 @@
             <li class="footer-list__item"><a href="#"><i class="footer-list__item--icon fas fa-hands-helping"></i>Devenir partenaire</a>
             </li>
             <li class="footer-list__item"><a href="#">Mentions légales</a></li>
-            <li class="footer-list__item"><a href="#">Contact</a></li>
+            <li class="footer-list__item"><a href="mailto:contact@ohmyfood.fr">Contact</a></li>
         </u>
     </footer>
 
