--- a/singulars/singular-lapalettedugout.html
+++ b/singulars/singular-lapalettedugout.html
@@ -153,7 +153,7 @@
             <li class="footer-list__item"><a href="#"><i class="footer-list__item--icon fas fa-hands-helping"></i>Devenir partenaire</a>
             </li>
             <li class="footer-list__item"><a href="#">Mentions légales</a></li>
-            <li class="footer-list__item"><a href="#">Contact</a></li>
+            <li class="footer-list__item"><a href="mailto:contact@ohmyfood.fr">Contact</a></li>
         </u>
     </footer>
 
