--- a/singulars/singular-ledelicedessens.html
+++ b/singulars/singular-ledelicedessens.html
@@ -46,8 +46,8 @@
 
                 <article class="singular-element__item">
                     <div class="singular-element__item-text">
-                     <h3 class="singular-element__item-text--title">Fricassé d'escargot</h3>
-                     <p class="singular-element__item-text--details">Au piment d'espelette</p>
+                     <h3 class="singular-element__item-text--title">Tartare de thon</h3>
+                     <p class="singular-element__item-text--details">Assaisonné au yuzu</p>
                     </div>
                      <p class="singular-element__item--price">25 €</p>
                      <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
@@ -55,10 +55,83 @@
 
                 <article class="singular-element__item">
                     <div class="singular-element__item-text">
-                     <h3 class="singular-element__item-text--title">Foie gras de canard mi-cuit</h3>
-                     <p class="singular-element__item-text--details">Assaisonné à la truffe sur lit de caviar</p>
+                     <h3 class="singular-element__item-text--title">Bouchée de homard croustilland</h3>
+                     <p class="singular-element__item-text--details">Et sa farandole de petits légumes</p>
                     </div>
-                     <p class="singular-element__item--price">25 €</p>
+                     <p class="singular-element__item--price">35 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Velouté de cèpes</h3>
+                     <p class="singular-element__item-text--details">Aux truffes</p>
+                    </div>
+                     <p class="singular-element__item--price">20 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+            </section>
+
+            <section class="singular-element">
+                <h2 class="singular-element--title">Plats</h2>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Poulet rôti aux herbes de provence</h3>
+                     <p class="singular-element__item-text--details">Et sa crème de truffe</p>
+                    </div>
+                     <p class="singular-element__item--price">40 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Langouste rôtie</h3>
+                     <p class="singular-element__item-text--details">Et ses légumes de saison</p>
+                    </div>
+                     <p class="singular-element__item--price">35 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Côte de boeuf angus</h3>
+                     <p class="singular-element__item-text--details">Et sa purée de panais</p>
+                    </div>
+                     <p class="singular-element__item--price">44 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+            </section>
+
+            <section class="singular-element">
+                <h2 class="singular-element--title">Desserts</h2>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Farandole de desserts</h3>
+                     <p class="singular-element__item-text--details">Du chef</p>
+                    </div>
+                     <p class="singular-element__item--price">18 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Crème brulée</h3>
+                     <p class="singular-element__item-text--details">Revisitée</p>
+                    </div>
+                     <p class="singular-element__item--price">22 €</p>
+                     <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
+                </article>
+
+                <article class="singular-element__item">
+                    <div class="singular-element__item-text">
+                     <h3 class="singular-element__item-text--title">Tiramisu</h3>
+                     <p class="singular-element__item-text--details">À la noisette</p>
+                    </div>
+                     <p class="singular-element__item--price">23 €</p>
                      <div class="singular-element__item__add-btn"><i class="singular-element_item--add-btn--icon fas fa-check-circle"></i></div>
                 </article>
 
@@ -80,7 +153,7 @@
             <li class="footer-list__item"><a href="#"><i class="footer-list__item--icon fas fa-hands-helping"></i>Devenir partenaire</a>
             </li>
             <li class="footer-list__item"><a href="#">Mentions légales</a></li>
-            <li class="footer-list__item"><a href="#">Contact</a></li>
+            <li class="footer-list__item"><a href="mailto:contact@ohmyfood.fr">Contact</a></li>
         </u>
     </footer>
 
