Ajout des images au format Desktop

--- a/singulars/singular-lapalettedugout.html
+++ b/singulars/singular-lapalettedugout.html
@@ -29,7 +29,7 @@
 
     <main>
 
-        <div class="singular-thumbnail"><img class="singular-thumbnail--img" src="../medias/photos/palette-du-gout.jpg" alt=""></div>
+        <div class="singular-thumbnail"><img class="singular-thumbnail--img" srcset="../medias/photos/palette-du-gout.jpg 1000w, ../medias/photos/desktop/palette-du-gout-desktop.jpg 1980w," sizes="(min-width: 992px) 1980px, 1000px" alt=""></div>
 
         <div class="singular-main-section">
 
