--- a/singulars/singular-lanoteenchantee.html
+++ b/singulars/singular-lanoteenchantee.html
@@ -29,7 +29,7 @@
 
     <main>
 
-        <div class="singular-thumbnail"><img class="singular-thumbnail--img" src="../medias/photos/la-note-enchantee.jpg" alt=""></div>
+        <div class="singular-thumbnail"><img class="singular-thumbnail--img" srcset="../medias/photos/la-note-enchantee.jpg 1000w, ../medias/photos/desktop/la-note-enchantee-desktop.jpg 1980w," sizes="(min-width: 992px) 1980px, 1000px" alt=""></div>
 
         <div class="singular-main-section">
 
