--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
 
         <!-- Barre de recherche par localisation -->
 
-        <form class="searchform" action="">
+        <form class="searchform" action="localisation.php">
             <i class="searchform--icon fas fa-map-marker-alt"></i>
             <input class="searchform--input" type="search" id="site-search" name="search" placeholder="Paris, Belleville">
         </form>
@@ -47,7 +47,7 @@
         <section class="hero-section">
             <h1 class="hero-section--title classic-title">Réservez le menu qui vous convient</h1>
             <p class="hero-section--slogan">Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
-            <button class="primary-btn"><a href="#">Explorer nos restaurants</a></button>
+            <a href="#" class="primary-btn">Explorer nos restaurants</a>
         </section>
 
         <!-- Section "Fonctionnement" -->
@@ -143,14 +143,14 @@
 
     <footer>
         <h2>ohmyfood</h2>
-        <u class="footer-list">
+        <ul class="footer-list">
             <li class="footer-list__item"><a href="#"><i class="footer-list__item--icon fas fa-utensils"></i>Proposer un restaurant</a>
             </li>
             <li class="footer-list__item"><a href="#"><i class="footer-list__item--icon fas fa-hands-helping"></i>Devenir partenaire</a>
             </li>
             <li class="footer-list__item"><a href="#">Mentions légales</a></li>
             <li class="footer-list__item"><a href="mailto:contact@ohmyfood.fr">Contact</a></li>
-        </u>
+        </ul>
     </footer>
 
 </body>
